# gramConfig

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/gramconfig/: configurable.hpp  configuration.hpp
src/: CMakeLists.txt  configuration.cpp
